0.29
 - Improve Wikibase::Datatype doc links.

0.28 2023-04-23T10:34:23+02:00
 - Add check_sense() to Utils.
 - Add support of wikibase-sense to Snak.
 - Add Wikibase::Datatype::Value::Sense class.
 - Fix doc in Wikibase::Datatype::Value::Property.

0.27 2023-04-22T19:14:08+02:00
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::InstanceOf::VersionEditionOrTranslation.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::InstanceOf::WikidataProperty.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::ItemForThisSense::Dog.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::Of::Poem.
 - Improve example comments.
 - Update language codes.

0.26 2023-04-21T20:18:03+02:00
 - Add check_datetime() utility.
 - Add date time check to Wikibase::Datatype::Value::Time.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::GrammaticalGender::Masculine.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::InstanceOf::Human.
 - Fix example in
   Test::Shared::Fixture::Wikibase::Datatype::Value::Item::Wikidata::WikidataEntity.
 - Fix module doc description in
   Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::GivenName::Douglas.
 - Improve doc EXAMPLE in Wikibase::Datatype::Reference to something real.

0.25 2023-04-17T11:28:59+02:00
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Reference::Wikidata::ReferenceURL.
 - Add doc for
   Test::Shared::Fixture::Wikibase::Datatype::Reference::Wikidata::VIAF.
 - Add item to doc SEE ALSO section in
   Wikibase::Datatype::Value::Globecoordinate.
 - Add reference to
   Test::Shared::Fixture::Wikibase::Datatype::Statement::Wikidata::SexOrGender::Male
   as example of statement with multiple references.
 - Add references parameter and method to MediainfoStatement.
 - Fix
   Test::Shared::Fixture::Wikibase::Datatype::MediainfoSnak::Commons::Depicts::Human
   object.